fix 7/9 tutor notes; brain-prime brain-progression remain

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "Hexlet Frontend First Project",
+  "description": "Set of small mathematic console games",
   "type": "module",
   "main": "index.js",
   "bin": {
